# canary

./: .gitignore  Cargo.toml  GEMINI.md  Makefile  README.md  build.zig
docs/: contol_flow.md  enums.md  functions.md  interface.md  macros.md  structs.md  variables.md
include/: canary.h
include/lexer/: lexer.h  token.h
include/parser/: parser.h
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
parser/: Cargo.toml
parser/src/: lib.rs  node.rs
source/: canary.c  main.c
source/lexer/: lexer.c  token.c
source/parser/: parser.c
src/: canary.rs  cli.rs  compiler_test.rs  main.rs  runner.rs  test_compiler.rs  tester.rs  tester2.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: mod.rs  node.rs
tests/: expected.json  function.cy  generics.cy  hello.cy  macro.cy  mega_test.cy  person.cy  readme_test.json  user.cy  variable.cy
utils/src/: lib.rs
