[package]
name = "canary"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["lexer", "parser", "utils"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
lexer = { path = "./lexer" }
parser = { path = "./parser" }
utils = { path = "./utils" }
rayon = "1.11.0"
